2009-12-09  Bruno Haible  <bruno@clisp.org>

	Ensure _UNUSED_PARAMETER_ is defined in the public header files.
	* lib/unistring/cdefs.h: New file, based on gnulib/m4/gnulib-common.m4.
	* lib/Makefile.am (nobase_nodist_include_HEADERS): Add it.
	* gnulib-local/lib/unistr.h.diff: Include unistring/cdefs.h.
	Reported by Mike Gran <spk121@yahoo.com>.

2009-09-01  Bruno Haible  <bruno@clisp.org>

	* README.woe32: Put the -mno-cygwin option into CC and CXX.
	Recommended by Paolo Bonzini and Eric Blake.

2009-08-17  Bruno Haible  <bruno@clisp.org>

	* Version 0.9.1.1 released.

2009-08-16  Bruno Haible  <bruno@clisp.org>

	* version.sh: Bump version number and date.
	* README: Update version.

2009-08-16  Bruno Haible  <bruno@clisp.org>

	* doc/Makefile.am (dist-html-split): Depend on libunistring_toc.html.

2009-08-16  Bruno Haible  <bruno@clisp.org>

	Fix build error when a non-GNU C compiler or Solaris is used.
	* lib/Makefile.am (unistring/stdbool.h): Depend on stdbool.mini.h.
	(EXTRA_DIST): Add stdbool.mini.h.

2009-06-30  Bruno Haible  <bruno@clisp.org>

	* Version 0.9.1 released.

2009-06-30  Bruno Haible  <bruno@clisp.org>

	* woe32dll/unistring-exports.c: Add unicase_empty_prefix_context,
	unicase_empty_suffix_context.

2009-06-30  Bruno Haible  <bruno@clisp.org>

	* version.sh: Bump date.
	* lib/Makefile.am (LTV_*): Update to 1:0:1.
	* README: Update version.

2009-06-30  Bruno Haible  <bruno@clisp.org>

	* doc/unicase.texi (Case mappings of substrings): Add an example.

2009-06-29  Bruno Haible  <bruno@clisp.org>

	New functions for case mapping of substrings.
	* autogen.sh (GNULIB_MODULES): Add unicase/* modules relating to
	context sensitive case mapping. Preprocess also unicase.h.
	* doc/unicase.texi (Case mappings of substrings): New section.
	(Case insensitive comparison): Mention u*_ct_casefold functions.
	* doc/libunistring.texi: Update menu.
	Reported by Paolo Bonzini.

2009-06-11  Thien-Thi Nguyen  <ttn@gnuvola.org>
