@@ -19,7 +19,7 @@ BEGIN
     BEGIN
         BLOCK "04090000"  /* Lang = US English, Charset = ASCII */
         BEGIN
-	VALUE "Comments", "This library is free software; you can redistribute it and/or modify it under the terms of the GNU Lesser General Public License version 3 or later. You should have received a copy of the GNU Lesser General Public License along with this library; if not, see <http://www.gnu.org/licenses/>\0"
+        VALUE "Comments", "This library is free software; you can redistribute it and/or modify it under the terms of the GNU Lesser General Public License version 3 or later. You should have received a copy of the GNU Lesser General Public License along with this library; if not, see <http://www.gnu.org/licenses/>\0"
             VALUE "CompanyName", "Free Software Foundation\0"
             VALUE "FileDescription", "LGPLed libunistring for Windows NT/2000/XP/Vista and Windows 95/98/ME\0"
             VALUE "FileVersion", PACKAGE_VERSION_STRING "\0"
